added same logic for root blank nodes as for nested blank nodes